augment coverage to 100%

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,51 @@
 {
   "cSpell.ignoreWords": [
+    "appleinc",
+    "behance",
+    "browserslist",
+    "checkmark",
+    "codepen",
+    "desc",
+    "deviantart",
+    "dribbble",
+    "ello",
+    "embedded",
+    "file",
+    "flickr",
+    "hackernews",
+    "icomoon",
+    "icon",
+    "iefix",
+    "joomla",
+    "lanyrd",
+    "lastfm",
+    "libreoffice",
+    "linkedin",
+    "numberic",
+    "onedrive",
+    "openoffice",
+    "opentype",
+    "pacman",
+    "pagebreak",
+    "paypal",
+    "pilcrow",
+    "pinterest",
+    "qrcode",
+    "renren",
     "serializers",
-    "wojtekmaj"
+    "sina",
+    "sort",
+    "soundcloud",
+    "spotify",
+    "stackoverflow",
+    "strikethrough",
+    "stumbleupon",
+    "trello",
+    "truetype",
+    "ungroup",
+    "weibo",
+    "whatsapp",
+    "wojtekmaj",
+    "youtube"
   ]
 }
