--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --update-snapshot",
+    "coverage": "jest -update-snapshot --collectCoverage",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
@@ -57,8 +58,10 @@
     "@types/enzyme": "^3.10.8",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
     "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.6.1",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.0",
+    "identity-obj-proxy": "^3.0.0",
     "prettier": "^2.2.1",
     "ts-jest": "^26.4.4"
   }
